--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,7 @@
     </head>
 
     <body>
-        <header class="site-header">
-    <div class="container">
-        <h1 class="site-header__logo">The Wellbeing Hub, from Teen Tips</h1>
-    </div>
-</header>
-
+        {% include "site-header.html" %}
         <main>
             <section class="container">
                 <div class="hero">
