WHUB-256: Membership navigation

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
         <main>
             <section class="container">
                 <div class="membership-navigation d-flex justify-content-between align-items-center">
-                    <p class="membership-navigation__text d-sm-flex align-items-center"><span class="membership-navigation__icon icon icon-user"></span> Welcome back <strong>Ollie Pelling</strong><span class="badge badge--alternate">School Staff</span></p>
+                    <p class="membership-navigation__text d-flex align-items-center flex-wrap"><span class="membership-navigation__icon icon icon-user"></span>Welcome back <strong>Ollie Pelling</strong> <span class="badge badge--alternate">School Staff</p>
                     <nav>
                         <ul class="membership-navigation__menu list-reset d-none d-lg-flex">
                             <li><a href="#">Account Details</a></li>
