Revert "WHUB-256: WIP membership nav"

--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,7 @@
     {% include "site-header.html" %}
         <main>
             <section class="container">
-                <div class="membership-navigation d-flex justify-content-between align-items-center">
-                    <p class="membership-navigation__text d-flex align-items-center flex-wrap"><span class="membership-navigation__icon icon icon-user"></span>Welcome back <strong>Ollie Pelling</strong> <span class="badge badge--alternate">School Staff</p>
-                    <nav>
-                        <ul class="membership-navigation__menu list-reset d-none d-lg-flex">
-                            <li><a href="#">Account Details</a></li>
-                            <li><a href="#">Membership</a></li>
-                            <li><a href="#">My Courses</a></li>
-                            <li><a href="#">My Favourites</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </section>
-            <section class="container">
-                <div class="hero mt-4">
+                <div class="hero">
                     <div class="row">
                         <div class="hero__column-one col-lg-7 col-xxl-6 offset-xxl-1 row">
                             <p class="kicker col-xl-10">September's theme</p>
