WHUB-257: Start of the course landing page

--- a/src/components.html
+++ b/src/components.html
@@ -314,7 +314,7 @@
             </div>
             <h3>Dark theme banner with right aligned image</h3>
             <div class="banner banner--dark banner--flipped row">
-                <div class="col-sm-9 col-lg-7 col-xl-6 offset-xl-1">
+                <div class="col-sm-9 col-lg-7 col-xl-6  ms-xl-3">
                     <div class="banner__content">
                         <span class="banner__icon icon icon-support"></span>
                         <h2 class="banner__title">Our courses</h2>
