WHUB-258: Action cards

--- a/src/course-landing.html
+++ b/src/course-landing.html
@@ -3,7 +3,7 @@
     <main>
         <section class="container mt-4">
             <div class="banner banner--dark banner--flipped row">
-                <div class="col-sm-9 col-lg-7 col-xl-6 ms-xl-3">
+                <div class="col col-lg-7 col-xl-6 ms-xl-3">
                     <div class="banner__content">
                         <span class="banner__icon icon icon-support"></span>
                         <h2 class="banner__title">Our courses</h2>
@@ -18,8 +18,54 @@
                         </footer>
                     </div>
                 </div>
-                <div class="banner__underlay col-10 col-sm-5 col-lg-7">
+                <div class="banner__underlay col-10 col-sm-6 col-md-5 col-lg-7">
                     <div class="banner__image"><img src="/images/content/happy.jpg" /></div>
+                </div>
+            </div>
+        </section>
+        <section class="container mt-4 mt-lg-5 mb-4 mb-lg-8">
+            <div class="row">
+                <div class="col-lg-5 d-flex">
+                    <article class="action-card">
+                        <h2 class="action-card__heading">Staff Course</h2>
+                        <p class="action-card__copy">Cras commodo nibh vitae eleifend scelerisque. Aliquam cursus placerat erat. Sed lorem ligula, pellentesque at diam in, laoreet dapibus sem. Quisque venenatis nec erat eu varius. Sed sit amet leo in libero sodales venenatis. Cras non lorem tincidunt, mattis est sit amet, egestas nunc.</p>
+                        <div class="action-card__image">
+                            <img src="/images/content/dontlooknow.jpg" />
+                        </div>
+                        <footer class="action-card__action"><a href="#" class="btn btn-primary">Access the staff course</a></footer>
+                    </article>
+                </div>
+                <div class="col-lg-5 offset-lg-1 d-flex mt-2 mt-lg-0">
+                    <article class="action-card">
+                        <h2 class="action-card__heading">Gender-Based Violence Training</h2>
+                        <p class="action-card__copy">This CPD course relates to the UK Relationships and Sex Education curriculum. The ideas contained support the development of an inclusive school culture and further teachers’ understanding of how to teach what a healthy relationship should look like.</p>
+                        <div class="action-card__image">
+                            <img src="/images/content/schoolsout.jpg" />
+                        </div>
+                        <footer class="action-card__action"><a href="#" class="btn btn-primary">Access this CPD training</a></footer>
+                    </article>
+                </div>
+            </div>
+            <div class="row mt-lg-3">
+                <div class="col-lg-5 d-flex mt-2 mt-lg-0">
+                    <article class="action-card">
+                        <h2 class="action-card__heading">Our Complete Parenting Courses</h2>
+                        <p class="action-card__copy">Children don’t arrive with a handbook, and even if they did it would quickly become obsolete once they hit adolescence.  Our parenting courses will help you create a happy home life and give you tools for when drama strikes.</p>
+                        <div class="action-card__image">
+                            <img src="/images/content/lovethislaptop.jpg" />
+                        </div>
+                        <footer class="action-card__action"><a href="#" class="btn btn-primary">Access the parenting courses</a></footer>
+                    </article>
+                </div>
+                <div class="col-lg-5 offset-lg-1 d-flex mt-2 mt-lg-0">
+                    <article class="action-card">
+                        <h2 class="action-card__heading">Parent Events Talks</h2>
+                        <p class="action-card__copy">These talks are designed to help you create a good working alliance with parents and carers. Each video is approximately 15 minutes long, making them perfect to screen at parent events.</p>
+                        <div class="action-card__image">
+                            <img src="/images/content/legslegslegs.jpg" />
+                        </div>
+                        <footer class="action-card__action"><a href="#" class="btn btn-primary">View the talks</a></footer>
+                    </article>
                 </div>
             </div>
         </section>
