WHUB-259: Final polish

--- a/src/course-landing.html
+++ b/src/course-landing.html
@@ -1,8 +1,8 @@
 {% include "head.html" %}
 {% include "site-header.html" %}
     <main>
-        <section class="container mt-4">
-            <div class="banner banner--dark banner--flipped row">
+        <section class="container">
+            <div class="banner banner--dark banner--flipped row pt-8 pt-lg-6 pb-lg-7">
                 <div class="col col-lg-7 col-xl-6 ms-xl-3">
                     <div class="banner__content">
                         <span class="banner__icon icon icon-support"></span>
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </section>
-        <section class="container mt-4 mt-lg-5 mb-4 mb-lg-8">
+        <section class="container mt-5 mb-4 mb-lg-8">
             <div class="row overflow-hidden">
                 <div class="col-lg-5 d-flex">
                     <article class="action-card">
