WBHUB-260: Added teaser card component

--- a/src/components.html
+++ b/src/components.html
@@ -338,6 +338,59 @@
             </div>
         </section>
 
+        <div class="container">
+            <h2>Teaser cards</h2>
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <article class="teaser-card">
+                        <strong class="kicker">Module one</strong>
+                        <h2 class="h3 teaser-card__heading">Intra-personal & Interpersonal Communication</h2>
+                        <p>Creating healthy internal dialogue and self concept. Understanding the OK Corral to spot the signs of low self-esteem.</p>
+                    </article>
+                </div>
+                <div class="col-md-6 mt-2 mt-md-0 d-flex">
+                    <article class="teaser-card">
+                        <strong class="kicker">Module 2</strong>
+                        <h2 class="h3 teaser-card__heading">Child & Youth Development</h2>
+                        <p>Develop an understanding of Attachment Theory and how to work with the different attachment styles. Explore what neuroscience can tell us about attachment & trauma.
+                        </p>
+                    </article>
+                </div>
+            </div>
+            <div class="row mt-md-3">
+                <div class="col-md-6 mt-2 mt-md-0 d-flex">
+                    <article class="teaser-card">
+                        <strong class="kicker">Module 3</strong>
+                        <h2 class="h3 teaser-card__heading">The Teenage Brain</h2>
+                        <p>The adolescent brain and its impact on risk taking, experimentation, impulse & emotional control, recognition of social cues and why sleep matters.</p>
+                    </article>
+                </div>
+                <div class="col-md-6 mt-2 mt-md-0 d-flex">
+                    <article class="teaser-card">
+                        <strong class="kicker">Module 4</strong>
+                        <h2 class="h3 teaser-card__heading">Mental Health</h2>
+                        <p>Mental health awareness and recognising the signs of mental ill-health.</p>
+                    </article>
+                </div>
+            </div>
+            <div class="row mt-md-3">
+                <div class="col-md-6 mt-2 mt-md-0 d-flex">
+                    <article class="teaser-card">
+                        <strong class="kicker">Module 5 & 6</strong>
+                        <h2 class="h3 teaser-card__heading">Self Awareness</h2>
+                        <p>Strategies to help young people manage their emotions in flashpoint situations. Listening to understand unmet emotional needs. CBT & Neuroscience for staff and students. Developing and maintaining mental health and wellbeing.</p>
+                    </article>
+                </div>
+                <div class="col-md-6  mt-2 mt-md-0 d-flex">
+                    <article class="teaser-card">
+                        <strong class="kicker">Module 7</strong>
+                        <h2 class="h3 teaser-card__heading">Motivation</h2>
+                        <p>The impact of labelling, an introduction to Transactional Analysis, the Law of Attraction and the Hebbian Law.</p>
+                    </article>
+                </div>
+            </div>
+        </div>
+
         <section class="container">
             <h2>Banners</h2>
             <h3>Light theme banner with left aligned image</h3>
