--- a/src/components.html
+++ b/src/components.html
@@ -391,6 +391,39 @@
             </div>
         </div>
 
+        <div class="container">
+            <h2 class="mt-4">Flash cards</h2>
+            <ul class="row list-reset">
+                <li class="col-lg-3">
+                    <a href="#" class="flash-card d-flex"><span class="icon icon-link-arrow"></span>I feel nervous in groups of people, what can I do?</a>
+                </li>
+                <li class="col-lg-3 mt-2 mt-lg-0">
+                    <a href="#" class="flash-card d-flex"><span class="icon icon-link-arrow"></span>I feel nervous in groups of people, what can I do?</a>
+                </li>
+                <li class="col-lg-3 mt-2 mt-lg-0">
+                    <a href="#" class="flash-card d-flex"><span class="icon icon-link-arrow"></span>I feel nervous in groups of people, what can I do?</a>
+                </li>
+                <li class="col-lg-3 mt-2 mt-lg-0">
+                    <a href="#" class="flash-card d-flex"><span class="icon icon-link-arrow"></span>I feel nervous in groups of people, what can I do?</a>
+                </li>
+            </ul>
+            <h2 class="mt-4">Dark flash cards</h2>
+            <ul class="row list-reset">
+                <li class="col-lg-3">
+                    <a href="#" class="flash-card flash-card--dark d-flex"><span class="icon icon-link-arrow"></span>I feel nervous in groups of people, what can I do?</a>
+                </li>
+                <li class="col-lg-3 mt-2 mt-lg-0">
+                    <a href="#" class="flash-card flash-card--dark d-flex"><span class="icon icon-link-arrow"></span>I feel nervous in groups of people, what can I do?</a>
+                </li>
+                <li class="col-lg-3 mt-2 mt-lg-0">
+                    <a href="#" class="flash-card flash-card--dark d-flex"><span class="icon icon-link-arrow"></span>I feel nervous in groups of people, what can I do?</a>
+                </li>
+                <li class="col-lg-3 mt-2 mt-lg-0">
+                    <a href="#" class="flash-card flash-card--dark d-flex"><span class="icon icon-link-arrow"></span>I feel nervous in groups of people, what can I do?</a>
+                </li>
+            </ul>
+        </div>
+
         <section class="container">
             <h2 class="mt-4">Banners</h2>
             <h3 class="mt-3">Light theme banner with left aligned image</h3>
@@ -752,6 +785,7 @@
             <li class="col-sm-6"><a href="#" class="index-listing__item index-listing__item-even"><span class="icon icon-link-arrow"></span>Blcohol</a></li>
         </ul>
     </div>
+    
     <div class="container">
         <h2 class="mt-4">Site footer</h2>
     </div>
