WHUB-276: Inline select form item styling

--- a/src/components.html
+++ b/src/components.html
@@ -92,6 +92,51 @@
             <a href="#" class="btn btn-outline-primary"><span class="icon icon-user"></span>Your account</a>
             <a href="#" class="btn btn-outline-secondary"><span class="icon icon-user"></span>Your account</a>
         </section>
+        
+        <section class="container">
+            <h2 class="mt-4">Inline select form items</h2>
+            <div class="row align-items-center">
+                <div class="col-auto">
+                    <div class="row  align-items-center g-1">
+                        <label class="col-auto col-form-label" for="selectExample1" class="form-label">Filter by type</label>
+                        <div class="col-auto">
+                            <select id="selectExample1" class="form-select">
+                                <option selected>View all types</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-auto">
+                    <div class="row align-items-center g-1">
+                        <label class="col-auto col-form-label" for="selectExample1" class="form-label">Filter by type</label>
+                        <div class="col-auto">
+                            <select id="selectExample1" class="form-select">
+                                <option selected>View all types</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-auto flex-grow-1">
+                    <div class="row align-items-center justify-content-end g-1">
+                        <label class="col-auto col-form-label" for="selectExample1" class="form-label">Filter by type</label>
+                        <div class="col-auto">
+                            <select id="selectExample1" class="form-select">
+                                <option selected>View all types</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="container">
             <h2 class="mt-4">Cards</h2>
