--- a/src/faq-answer.html
+++ b/src/faq-answer.html
@@ -2,9 +2,9 @@
 {% include "site-header.html" %}
 <div class="container-fluid">
     <div class="row align-items-stretch">
-        <div class="col-md-3 d-flex">
+        <div class="col-md-3 d-md-flex">
             <nav class="js-topic-navigation topic-navigation">
-                <h2 class="js-topic-navigation__title topic-navigation__title">Anxiety and stress questions</h2>
+                <h2 class="js-topic-navigation__title topic-navigation__title">Anxiety and stress questions <span class="topic-navigation__title-icon icon icon-arrowdown"></span></h2>
                 <ul class="js-topic-navigation__list topic-navigation__list list-reset">
                     <li class="topic-navigation__list-item"><a href="#" class="topic-navigation__list-item-link d-flex align-items-center justify-content-between is-active">I feel nervous in groups of people, what can I do?</a></li>
                     <li class="topic-navigation__list-item"><a href="#" class="topic-navigation__list-item-link d-flex align-items-center justify-content-between">What do people mean when they say social anxiety?<span class="icon icon-nav-down rotate-270 d-flex topic-navigation__list-item-icon"></span></a></li>
