WHUB-278: Meta content component

--- a/src/resources-content.html
+++ b/src/resources-content.html
@@ -6,15 +6,17 @@
                 <div class="col-lg-7 offset-lg-1">
                     <p class="kicker">Podcast</p>
                     <h1>Journaling for Wellbeing & Stress</h1>
-                    <p><strong>With:</strong> Francesca Geens, The Happy Self Journal</p>
-                    <p><strong>Posted:</strong> 27th May 2022</p>
-                    <div class="d-flex">
-                        <a class="badge" href="#">Mental Health</a>
-                        <a class="badge" href="#">Anxiety</a>
-                    </div>
-                    <div class="d-flex">
-                        <a class="btn btn-invisible-primary ps-0" href="#"><span class="icon icon-favorite"></span>Add to favourites</a>
-                        <a class="btn btn-invisible-primary ps-0" href="#"><span class="icon icon-download"></span>Save as PDF</a>
+                    <div class="content-meta">
+                        <p class="content-meta__item"><strong>With:</strong> Francesca Geens, The Happy Self Journal</p>
+                        <p class="content-meta__item"><strong>Posted:</strong> 27th May 2022</p>
+                        <div class="content-meta__tags">
+                            <a class="badge" href="#">Mental Health</a>
+                            <a class="badge" href="#">Anxiety</a>
+                        </div>
+                        <div class="content-meta__actions">
+                            <a class="btn btn-invisible-primary ps-0" href="#"><span class="icon icon-favorite"></span>Add to favourites</a>
+                            <a class="btn btn-invisible-primary ps-0" href="#"><span class="icon icon-download"></span>Save as PDF</a>
+                        </div>
                     </div>
                     <p>To mark Stress Awareness Month, we invited Francesca Geens, creator of The Happy Self Journal, an organisation that creates daily award-winning journals for children, teens and grown-ups. The journals use scientifically proven methods to reduce stress, promote happiness, develop healthy habits for life and nurture curiosity. We discuss the benefits of journaling for wellbeing, the different types of journaling, how to engage young people with journaling, and how journaling reduces stress and contributes to a growth mindset.</p>
                     <p>The Happy Self Journal has kindly offered all members of The Wellbeing Hub a 15% discount on the full range of their award-winning journals. Enter TEENTIPS15 at the checkout to receive your discount.</p>
