WHUB-283: Collapsible panel component

--- a/src/components.html
+++ b/src/components.html
@@ -937,6 +937,18 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <h2 class="mt-4">Collapsible panel</h2>
+        <div class="js-collapsible-panel collapsible-panel">
+            <h2 class="collapsible-panel__title"><a class="collapsible-panel__trigger" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"><span class="collapsible-panel__title-text">Summary of content</span> <span class="collapsible-panel__title-icon icon icon-nav-down"></span></a></h2>
+            <div class="collapsible-panel__content js-collapsible-panel__content collapse" id="collapseExample">
+                    <p>Nunc ex erat, vestibulum vitae sapien ac, posuere commodo arcu. Pellentesque ut ante vitae leo mollis egestas. Suspendisse nec mauris nec purus semper sagittis. Quisque vehicula, nisl eget tristique posuere, risus lorem lacinia enim, vel finibus est risus ut augue. Fusce orci erat, blandit ac rutrum quis, malesuada eu sapien. Suspendisse facilisis erat non neque malesuada, sit amet tincidunt mi porta. Ut tincidunt volutpat augue, nec congue sapien pretium eu. Vestibulum ante purus, convallis ut lorem a, maximus pharetra orci. Sed maximus finibus mi in maximus.</p>
+                    <p>Mauris sed ultricies arcu. Aliquam erat volutpat. Nulla et hendrerit diam, sit amet euismod eros. Donec rutrum eros diam, eget vehicula dui volutpat non. Aliquam suscipit varius neque, ac sodales nunc dignissim eu. Fusce eget commodo quam. Morbi luctus orci in elementum laoreet. Quisque quis ante vitae mauris commodo ullamcorper. Morbi consectetur dictum ante a vulputate. </p>
+                    <p>Curabitur venenatis justo eu vehicula fermentum. Phasellus a elit molestie, commodo quam sit amet, faucibus felis. Pellentesque vitae nisl et mauris porta tincidunt vitae sit amet neque. Aliquam mollis, ante id rhoncus fringilla, urna ex lacinia ipsum, sit amet congue massa tortor quis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam porttitor elit enim, id aliquam mauris egestas quis. Cras dignissim pretium libero vitae congue.</p>                    
+              </div>
+        </div>
+    </div>
     
     <div class="container">
         <h2 class="mt-4">Site footer</h2>
